--- a/index.html
+++ b/index.html
@@ -1,207 +1,332 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DriverChunk Solution</title>
+  <title>DriverChunk Solution V.2</title>
+  <HTA:APPLICATION
+    ID="DriverChunk"
+    APPLICATIONNAME="DriverChunk Solution V.2"
+    BORDER="thin"
+    CAPTION="yes"
+    SHOWINTASKBAR="yes"
+    SINGLEINSTANCE="yes"
+    SYSMENU="yes"
+  />
+
   <style>
     * {
       box-sizing: border-box;
-      margin: 0; padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     body {
-      background-color: #121212;
-      color: #e0e0e0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 1rem;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: #eef1f5;
+      color: #2c3e50;
+      margin: 30px auto;
+      padding: 0 20px;
+      max-width: 1000px;
     }
 
-    header {
-      font-size: 2.4rem;
-      font-weight: 700;
-      color: #60a5fa;
-      margin-bottom: 0.4rem;
-      user-select: none;
+    h1 {
       text-align: center;
+      color: #2e86de;
+      font-size: 28px;
+      margin-bottom: 5px;
     }
 
     .credit {
-      font-size: 1rem;
-      color: #9ca3af;
-      margin-bottom: 1.8rem;
-      user-select: none;
       text-align: center;
-    }
-
-    main {
-      max-width: 900px;
-      width: 100%;
-      display: flex;
-      gap: 2rem;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    section.app-version {
-      background-color: #1e293b;
-      border-radius: 12px;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.85);
-      padding: 1.8rem 2.2rem;
-      flex: 1 1 400px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      transition: background-color 0.3s ease;
-    }
-
-    section.app-version:hover {
-      background-color: #273449;
+      font-size: 14px;
+      color: #7f8c8d;
+      margin-bottom: 30px;
     }
 
     h2 {
-      font-size: 1.9rem;
-      color: #60a5fa;
-      margin-bottom: 1rem;
+      color: #2e86de;
+      border-left: 6px solid #2e86de;
+      padding: 6px 12px;
+      background: #ffffff;
+      border-radius: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-top: 30px;
+    }
+
+    .download-section {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-bottom: 20px;
+    }
+
+    .app-box {
+      background: #ffffff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      width: 250px;
       text-align: center;
     }
 
-    img {
-      max-width: 100%;
-      max-height: 240px;
+    .app-box h3 {
+      margin-bottom: 10px;
+      color: #333;
+    }
+
+    .button-download {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #2e86de;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.2s ease;
+    }
+
+    .button-download:hover {
+      background-color: #1a5fb4;
+    }
+
+    #list, #sysinfo, #missing {
+      background: #ffffff;
+      padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.85);
-      margin-bottom: 1.3rem;
-      background-color: #0f172a;
+      margin-top: 15px;
+      margin-bottom: 30px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+      font-size: 14px;
+      line-height: 1.6;
     }
 
-    p.description {
-      font-size: 1.1rem;
-      color: #cbd5e1;
-      margin-bottom: 1rem;
-      text-align: center;
-      line-height: 1.4;
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+      margin: 0;
     }
 
-    p.features {
-      font-size: 1rem;
-      color: #a5b4fc;
+    li {
+      padding: 10px 12px;
+      border-bottom: 1px solid #eaecef;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    li:last-child {
+      border-bottom: none;
+    }
+
+    .driver-name {
       font-weight: 600;
-      margin-bottom: 1.6rem;
-      text-align: center;
-      line-height: 1.3;
+      color: #2c3e50;
     }
 
-    a.button-download {
+    .driver-version {
+      font-style: italic;
+      color: #7f8c8d;
+    }
+
+    .missing {
+      background-color: #fff7e6;
+      border-left: 5px solid #ff9800;
+      padding: 12px 16px;
+      margin: 10px 0;
+      border-radius: 6px;
+      transition: background-color 0.2s ease;
+    }
+
+    .missing:hover {
+      background-color: #fff2cc;
+    }
+
+    .success {
+      background-color: #e6f7ec;
+      border-left: 5px solid #4caf50;
+      padding: 12px 16px;
+      border-radius: 6px;
+    }
+
+    a {
+      color: #2980b9;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    #download-popup {
+      display: none;
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       background-color: #2563eb;
       color: white;
-      font-weight: 700;
-      font-size: 1.1rem;
-      text-decoration: none;
-      padding: 0.9rem 1.8rem;
-      border-radius: 8px;
-      box-shadow: 0 5px 14px rgba(37,99,235,0.85);
-      user-select: none;
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    a.button-download:hover,
-    a.button-download:focus {
-      background-color: #1d4ed8;
-      box-shadow: 0 7px 20px rgba(29,78,216,0.9);
-      outline: none;
-    }
-
-    section.notice {
-      background-color: #3b4252;
-      border-left: 6px solid #facc15;
-      border-radius: 6px;
-      color: #f9fafb;
-      max-width: 900px;
       padding: 1rem 1.5rem;
-      margin: 2rem 0 1rem 0;
-      font-weight: 600;
-      text-align: center;
-      user-select: none;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.7);
-    }
-
-    footer {
-      color: #9ca3af;
-      font-size: 0.95rem;
-      user-select: none;
-      margin-top: auto;
-      padding: 1.2rem 0;
-      text-align: center;
-    }
-
-    @media (max-width: 700px) {
-      main {
-        flex-direction: column;
-        gap: 2.8rem;
-      }
-
-      section.app-version {
-        flex: none;
-        width: 100%;
-      }
+      border-radius: 8px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+      font-weight: bold;
+      z-index: 9999;
     }
   </style>
+
+  <script language="VBScript">
+    Sub Window_OnLoad()
+      ListDrivers
+      ShowSystemInfo
+      SmartDriverCheck
+    End Sub
+
+    Sub ListDrivers()
+      Dim objWMI, colDrivers, drv, html
+      Set objWMI = GetObject("winmgmts:\\.\root\CIMV2")
+      Set colDrivers = objWMI.ExecQuery("SELECT * FROM Win32_PnPSignedDriver")
+
+      html = "<ul>"
+      For Each drv In colDrivers
+        If Not IsNull(drv.DeviceName) Then
+          html = html & "<li><span class='driver-name'>" & drv.DeviceName & "</span>" & _
+                 "<span class='driver-version'>" & drv.DriverVersion & "</span></li>"
+        End If
+      Next
+      html = html & "</ul>"
+      document.getElementById("list").innerHTML = html
+    End Sub
+
+    Sub ShowSystemInfo()
+      Dim objWMI, sysItems, item, html
+      Set objWMI = GetObject("winmgmts:\\.\root\CIMV2")
+      Set sysItems = objWMI.ExecQuery("SELECT * FROM Win32_ComputerSystem")
+
+      For Each item In sysItems
+        html = "<b>Manufacturer:</b> " & item.Manufacturer & "<br/>"
+        html = html & "<b>Model:</b> " & item.Model & "<br/>"
+        html = html & "<b>Total RAM:</b> " & FormatNumber(item.TotalPhysicalMemory / 1073741824, 2) & " GB<br/>"
+      Next
+
+      Set sysItems = objWMI.ExecQuery("SELECT * FROM Win32_OperatingSystem")
+      For Each item In sysItems
+        html = html & "<b>Operating System:</b> " & item.Caption & " (" & item.Version & ")<br/>"
+      Next
+
+      Set sysItems = objWMI.ExecQuery("SELECT * FROM Win32_Processor")
+      For Each item In sysItems
+        html = html & "<b>Processor:</b> " & item.Name & "<br/>"
+      Next
+
+      document.getElementById("sysinfo").innerHTML = html
+    End Sub
+
+    Sub SmartDriverCheck()
+      Dim objWMI, colDevices, colDrivers
+      Dim dev, drv, html
+      Dim installedDevices, vendorLinks, foundVendors
+      Dim matchedVendor, vendor
+
+      Set objWMI = GetObject("winmgmts:\\.\root\CIMV2")
+      Set colDevices = objWMI.ExecQuery("SELECT * FROM Win32_PnPEntity WHERE ConfigManagerErrorCode <> 0")
+      Set colDrivers = objWMI.ExecQuery("SELECT * FROM Win32_PnPSignedDriver")
+
+      Set installedDevices = CreateObject("Scripting.Dictionary")
+      For Each drv In colDrivers
+        If Not IsNull(drv.DeviceName) Then
+          installedDevices(drv.DeviceName) = True
+        End If
+      Next
+
+      Set vendorLinks = CreateObject("Scripting.Dictionary")
+      vendorLinks.Add "Intel", "https://www.intel.com/download-center/"
+      vendorLinks.Add "Realtek", "https://www.realtek.com/en/downloads"
+      vendorLinks.Add "AMD", "https://www.amd.com/en/support"
+      vendorLinks.Add "NVIDIA", "https://www.nvidia.com/Download/index.aspx"
+      vendorLinks.Add "Broadcom", "https://www.broadcom.com/support/download-search"
+      vendorLinks.Add "Qualcomm", "https://www.qualcomm.com/support"
+
+      html = ""
+      Set foundVendors = CreateObject("Scripting.Dictionary")
+
+      For Each dev In colDevices
+        If Not IsNull(dev.Name) Then
+          matchedVendor = False
+          For Each vendor In vendorLinks.Keys
+            If InStr(UCase(dev.Name), UCase(vendor)) > 0 Then
+              If Not foundVendors.Exists(vendor) Then
+                html = html & "<div class='missing'>⚠ Missing driver for <b>" & vendor & "</b> device: <i>" & dev.Name & "</i><br/>" & _
+                              "<a href='" & vendorLinks(vendor) & "' target='_blank'>Download from " & vendor & "</a></div>"
+                foundVendors.Add vendor, True
+                matchedVendor = True
+              End If
+            End If
+          Next
+          If Not matchedVendor Then
+            html = html & "<div class='missing'>Oops! Missing drivers detected on this system: <i>" & dev.Name & "</i></div>"
+          End If
+        End If
+      Next
+
+      If html = "" Then
+        html = "<div class='success'>Yeah! No missing drivers detected on this system.</div>"
+      End If
+
+      document.getElementById("missing").innerHTML = html
+    End Sub
+  </script>
 </head>
+
 <body>
-
-  <header>
-    DriverChunk Solution 2.0<br />
-    Dark Mode & Light Mode Versions
-  </header>
-
+  <h1>DriverChunk Solution 2.0<br/>Dark Mode & Light Mode Versions</h1>
   <div class="credit">Developed by Arka Nandy</div>
 
-  <main>
-    <section class="app-version" id="dark-mode-app">
-      <img src="darkmode-screenshot.png" alt="DriverChunk Solution 2.0 (Dark) Screenshot" />
-      <h2>DriverChunk Solution 2.0 (Dark)</h2>
-      <p class="description">
-        This version includes <strong>System Information</strong> and <strong>Installed & Required Drivers</strong> modules,
-        all styled with a sleek dark mode theme for comfortable viewing in low light.
-      </p>
-      <p class="features">
-        • Displays CPU, memory, disk, and system info<br />
-        • Shows installed device drivers and flags missing drivers
-      </p>
-      <a href="DriverChunkSolution2.0-Dark.zip" class="button-download" download>
-        Download DriverChunk Solution 2.0 (Dark)
-      </a>
-    </section>
+  <div class="download-section">
+    <div class="app-box" id="dark-mode-app">
+      <h3>Dark Mode Version</h3>
+      <a href="DriverChunkSolution2.0-Dark.zip" class="button-download">Download</a>
+    </div>
 
-    <section class="app-version" id="light-mode-app">
-      <img src="lightmode-screenshot.png" alt="DriverChunk Solution 2.0 (Light) Screenshot" />
-      <h2>DriverChunk Solution 2.0 (Light)</h2>
-      <p class="description">
-        This version features the same <strong>System Information</strong> and <strong>Installed & Required Drivers</strong> functionality,
-        presented in a bright and clean light mode theme for easy daytime use.
-      </p>
-      <p class="features">
-        • Displays CPU, memory, disk, and system info<br />
-        • Shows installed device drivers and flags missing drivers
-      </p>
-      <a href="DriverChunkSolution2.0-Light.zip" class="button-download" download>
-        Download DriverChunk Solution 2.0 (Light)
-      </a>
-    </section>
-  </main>
+    <div class="app-box" id="light-mode-app">
+      <h3>Light Mode Version</h3>
+      <a href="DriverChunkSolution2.0-Light.zip" class="button-download">Download</a>
+    </div>
+  </div>
 
-  <section class="notice" role="alert" aria-live="polite">
-    <strong>Important:</strong> HTA files are Windows HTML Applications that run scripts on your PC. Please run only trusted files. Use antivirus software and keep your system updated.
-  </section>
+  <h2>System Information</h2>
+  <div id="sysinfo">Gathering system info...</div>
 
-  <footer>
-    © 2025 Arka Nandy. All rights reserved.
-  </footer>
+  <h2>Installed Drivers</h2>
+  <div id="list">Loading drivers...</div>
 
+  <h2>Missing Drivers & Suggestions</h2>
+  <div id="missing">Scanning devices...</div>
+
+  <div id="download-popup">Starting download...</div>
+
+  <script>
+    function showDownloadPopup(url) {
+      const popup = document.getElementById('download-popup');
+      popup.style.display = 'block';
+
+      setTimeout(() => {
+        popup.style.display = 'none';
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = '';
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+      }, 1500);
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelector('#dark-mode-app a.button-download').addEventListener('click', function(e) {
+        e.preventDefault();
+        showDownloadPopup('DriverChunkSolution2.0-Dark.zip');
+      });
+
+      document.querySelector('#light-mode-app a.button-download').addEventListener('click', function(e) {
+        e.preventDefault();
+        showDownloadPopup('DriverChunkSolution2.0-Light.zip');
+      });
+    });
+  </script>
 </body>
 </html>
