--- a/index.html
+++ b/index.html
@@ -2,148 +2,234 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DriverChunk Solution 2.0</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>DriverChunk Solution</title>
   <style>
+    * {
+      box-sizing: border-box;
+      margin: 0; padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0d1117;
-      color: #c9d1d9;
+      background-color: #121212;
+      color: #e0e0e0;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 2rem;
+      padding: 1rem;
     }
 
     header {
+      font-size: 2.4rem;
+      font-weight: 700;
+      color: #60a5fa;
+      margin-bottom: 0.6rem;
+      user-select: none;
       text-align: center;
-      margin-bottom: 1rem;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      color: #58a6ff;
     }
 
     .credit {
       font-size: 1rem;
-      color: #8b949e;
+      color: #94a3b8;
       margin-bottom: 2rem;
+      text-align: center;
     }
 
-    .apps {
+    main {
+      max-width: 900px;
+      width: 100%;
       display: flex;
+      gap: 2rem;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 2rem;
-      width: 100%;
-      max-width: 1000px;
     }
 
-    .card {
-      background-color: #161b22;
-      border-radius: 10px;
-      padding: 1.5rem;
-      width: 300px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    section.app-version {
+      background-color: #1e293b;
+      border-radius: 12px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.85);
+      padding: 1.8rem 2.2rem;
+      flex: 1 1 400px;
       display: flex;
       flex-direction: column;
       align-items: center;
+      transition: background-color 0.3s ease;
     }
 
-    .card img {
-      max-width: 100%;
-      border-radius: 6px;
+    section.app-version:hover {
+      background-color: #273449;
+    }
+
+    h2 {
+      font-size: 1.9rem;
+      color: #60a5fa;
       margin-bottom: 1rem;
-    }
-
-    .card h2 {
-      color: #58a6ff;
-      font-size: 1.4rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .card p {
       text-align: center;
-      margin-bottom: 1rem;
     }
 
-    .download-btn {
-      background-color: #238636;
+    img {
+      max-width: 100%;
+      max-height: 240px;
+      border-radius: 10px;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.85);
+      margin-bottom: 1.3rem;
+      background-color: #0f172a;
+    }
+
+    p.description {
+      font-size: 1.1rem;
+      color: #cbd5e1;
+      margin-bottom: 1rem;
+      text-align: center;
+      line-height: 1.4;
+    }
+
+    p.features {
+      font-size: 1rem;
+      color: #a5b4fc;
+      font-weight: 600;
+      margin-bottom: 1.6rem;
+      text-align: center;
+      line-height: 1.3;
+    }
+
+    a.button-download {
+      background-color: #2563eb;
       color: white;
-      padding: 0.6rem 1.2rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
+      font-weight: 700;
+      font-size: 1.1rem;
       text-decoration: none;
-    }
-
-    .download-btn:hover {
-      background-color: #2ea043;
-    }
-
-    .readme {
-      margin-top: 3rem;
-      background-color: #161b22;
-      padding: 1.5rem;
+      padding: 0.9rem 1.8rem;
       border-radius: 8px;
-      max-width: 800px;
-      width: 100%;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 5px 14px rgba(37,99,235,0.85);
+      user-select: none;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .readme h3 {
-      color: #58a6ff;
-      margin-bottom: 1rem;
+    a.button-download:hover,
+    a.button-download:focus {
+      background-color: #1d4ed8;
+      box-shadow: 0 7px 20px rgba(29,78,216,0.9);
+      outline: none;
     }
 
-    .readme p {
-      line-height: 1.6;
+    section.notice, section.about, section.readme {
+      background-color: #1f2937;
+      border-left: 6px solid #3b82f6;
+      border-radius: 6px;
+      color: #f9fafb;
+      max-width: 900px;
+      padding: 1rem 1.5rem;
+      margin: 2rem 0 1rem 0;
+      font-weight: 600;
+      text-align: left;
+      user-select: none;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.7);
+    }
+
+    section.readme {
+      border-left-color: #22c55e;
+    }
+
+    footer {
+      color: #9ca3af;
+      font-size: 0.95rem;
+      user-select: none;
+      margin-top: auto;
+      padding: 1.2rem 0;
+      text-align: center;
+    }
+
+    @media (max-width: 700px) {
+      main {
+        flex-direction: column;
+        gap: 2.8rem;
+      }
+
+      section.app-version {
+        flex: none;
+        width: 100%;
+      }
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>DriverChunk Solution 2.0<br />Dark Mode & Light Mode Versions</h1>
-    <div class="credit">Developed by Arka Nandy</div>
-  </header>
+<header>
+  DriverChunk Solution 2.0 <br />
+  Dark Mode & Light Mode Versions
+</header>
+<div class="credit">Developed by Arka Nandy</div>
 
-  <div class="apps">
-    <div class="card">
-      <img src="darkmode-screenshot.png" alt="Dark Mode Screenshot" />
-      <h2>Dark Mode</h2>
-      <p>System Info, Installed & Required Drivers - optimized for dark environments.</p>
-      <a class="download-btn" href="DriverChunkSolution2.0-Dark.zip" download>Download Dark Version</a>
-    </div>
-
-    <div class="card">
-      <img src="lightmode-screenshot.png" alt="Light Mode Screenshot" />
-      <h2>Light Mode</h2>
-      <p>System Info, Installed & Required Drivers - ideal for daylight usage.</p>
-      <a class="download-btn" href="DriverChunkSolution2.0-Light.zip" download>Download Light Version</a>
-    </div>
-  </div>
-
-  <section class="readme">
-    <h3>README</h3>
-    <p>
-      DriverChunk Solution 2.0 is a dual-themed (Dark & Light) utility designed for Windows users to:
-      <ul>
-        <li>Display complete system information (CPU, RAM, OS, Processor)</li>
-        <li>List all currently installed drivers with version details</li>
-        <li>Identify missing or required drivers</li>
-        <li>Provide vendor-specific links for driver downloads</li>
-      </ul>
+<main>
+  <section class="app-version" id="dark-mode-app">
+    <img src="darkmode-screenshot.png" alt="DriverChunk Solution 2.0 (Dark) Screenshot" />
+    <h2>DriverChunk Solution 2.0 (Dark)</h2>
+    <p class="description">
+      This version includes <strong>System Information</strong> and <strong>Installed & Required Drivers</strong> modules,
+      all styled with a sleek dark mode theme for comfortable viewing in low light.
     </p>
-    <p>
-      These applications are provided for free, and are delivered in HTA (HTML Application) format. They run natively
-      on Windows systems. Make sure to run them only on trusted environments and always scan for malware if downloaded
-      from third-party sources.
+    <p class="features">
+      • Displays CPU, memory, disk, and system info<br />
+      • Shows installed device drivers and flags missing drivers
     </p>
+    <a href="DriverChunkSolution2.0-Dark.zip" class="button-download" download>Download DriverChunk Solution 2.0 (Dark)</a>
   </section>
+
+  <section class="app-version" id="light-mode-app">
+    <img src="lightmode-screenshot.png" alt="DriverChunk Solution 2.0 (Light) Screenshot" />
+    <h2>DriverChunk Solution 2.0 (Light)</h2>
+    <p class="description">
+      This version features the same <strong>System Information</strong> and <strong>Installed & Required Drivers</strong> functionality,
+      presented in a bright and clean light mode theme for easy daytime use.
+    </p>
+    <p class="features">
+      • Displays CPU, memory, disk, and system info<br />
+      • Shows installed device drivers and flags missing drivers
+    </p>
+    <a href="DriverChunkSolution2.0-Light.zip" class="button-download" download>Download DriverChunk Solution 2.0 (Light)</a>
+  </section>
+</main>
+
+<section class="about">
+  <h2>About Us</h2>
+  <p>
+    DriverChunk is a utility application designed to help users quickly identify installed and missing drivers
+    on their system. Developed by Arka Nandy, it combines system diagnostics with practical download suggestions,
+    aimed at simplifying the driver management experience.
+  </p>
+</section>
+
+<section class="notice" role="alert" aria-live="polite">
+  <strong>Important:</strong> HTA files are Windows HTML Applications that run scripts on your PC. Please run only trusted files. Use antivirus software and keep your system updated.
+</section>
+
+<section class="readme">
+  <h2>README</h2>
+  <p>
+    DriverChunk Solution 2.0 is provided in two visual themes: Dark and Light. Both versions offer the same features:
+  </p>
+  <ul>
+    <li>Displays system hardware and OS information</li>
+    <li>Lists installed drivers with their versions</li>
+    <li>Detects missing drivers and recommends vendor links</li>
+    <li>HTA-based interface for easy Windows execution</li>
+  </ul>
+  <p>
+    To run the applications:
+    <ol>
+      <li>Extract the downloaded .zip file</li>
+      <li>Double-click the .hta file to launch the app</li>
+      <li>Allow execution if prompted by security warnings</li>
+    </ol>
+  </p>
+</section>
+
+<footer>
+  © 2025 Arka Nandy. All rights reserved.
+</footer>
 
 </body>
 </html>
